--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 			</ul>
 
 			<blockquote class="blockquote">
-				<p>"Boulaug's life and achievements are testimonies to the
+				<p  class="blockquote">"Boulaug's life and achievements are testimonies to the
 				far-reaching contributions that one man's towering intellect,
 				persistence and scientific vision can make to human peace and
 				progress."</p>
