--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
 			</ul>
 
 			<blockquote class="blockquote">
-				<p  class="blockquote">"Boulaug's life and achievements are testimonies to the
+				<p  class="blockquote-p">"Boulaug's life and achievements are testimonies to the
 				far-reaching contributions that one man's towering intellect,
 				persistence and scientific vision can make to human peace and
 				progress."</p>
-				<cite class="blockquote"><small>-- Indian Prime minister Manmohan Singh</small></cite>
+				<cite><small>-- Indian Prime minister Manmohan Singh</small></cite>
 			</blockquote>
 
 			<h2 class="wiki">If you have time, you should read more about this incredible
