--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 			</blockquote>
 
 			<h2 class="wiki">If you have time, you should read more about this incredible
-			human being on his <a
+			human being on this <a
 			href="https://en.wikipedia.org/wiki/Norman_Borlaug" target="_blank"> Wikipedia entry.</a> </h2>
 
 		</section>
